--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ input:-webkit-autofill:focus {
     /*-- 7. Home-Area --*/
 
     .home-area {
-        height: 100%;
+        height: 200vw;
         width: 100%;
         background: url('images/header-bg2.png') no-repeat scroll center bottom / cover;
         display: flex;
