--- a/style.css
+++ b/style.css
@@ -1533,3 +1533,44 @@ displa
 #image_giphy{
 
 }
+
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+@media only screen and (min-width: 1600px) {
+    .iframe-container {
+        width: 550px;
+    }
+}
+
+@media only screen and (min-width: 1400px) and (max-width: 1600px) {
+    .iframe-container {
+        width: 450px;
+    }
+}
+
+
+@media only screen and (min-width: 1100px) and (max-width: 1400px) {
+    .iframe-container {
+        width: 400px;
+    }
+}
+
+
+@media only screen and (min-width: 800px) and (max-width: 1100px) {
+    .iframe-container {
+        width: 350px;
+    }
+}
+
+.iframe-container iframe {
+    position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+  }
