--- a/style.css
+++ b/style.css
@@ -1537,7 +1537,9 @@ displa
 .iframe-container {
     position: relative;
     overflow: hidden;
-    padding-top: 56.25%;
+    padding-top: 50%;
+    margin-bottom: 18%;
+    margin-left: 5%;
 }
 
 @media only screen and (min-width: 1600px) {
