--- a/style.css
+++ b/style.css
@@ -98,7 +98,8 @@ h3 {
 
 html,
 body {
-    height: 100%
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -387,7 +388,8 @@ input:-webkit-autofill:focus {
     }
     .home_page_cnt_2{
         flex: 1;
-        margin-left: 12vw;
+        margin-left: 10vw;
+        margin-right: 5vw;
     }
     .video-photo {
         position: relative;
@@ -1529,53 +1531,6 @@ displa
 .form-double .box.last {
     float: right;
 }
-
-#image_giphy{
-
-}
-
-.iframe-container {
-    position: relative;
-    overflow: hidden;
-    padding-top: 50%;
-    margin-bottom: 18%;
-    margin-left: 5%;
-}
-
-@media only screen and (min-width: 1600px) {
-    .iframe-container {
-        width: 550px;
-    }
-}
-
-@media only screen and (min-width: 1400px) and (max-width: 1600px) {
-    .iframe-container {
-        width: 450px;
-    }
-}
-
-
-@media only screen and (min-width: 1100px) and (max-width: 1400px) {
-    .iframe-container {
-        width: 400px;
-    }
-}
-
-
-@media only screen and (min-width: 800px) and (max-width: 1100px) {
-    .iframe-container {
-        width: 350px;
-    }
-}
-
-.iframe-container iframe {
-    position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-  }
 
   #snackbar {
     visibility: hidden; /* Hidden by default. Visible on click */
